# Metadata-Analysis

./: .gitignore  Cargo.toml  README.md  README.txt  requirements.txt  test-set-1.txt
backend/src/: lib.rs
frontend/: app.js  crt.css  index.html
scripts/: run.ps1  run.sh  setup.ps1  setup.sh
