[package]
name = "image-forensics"
version = "0.1.0"
edition = "2021"

[lib]
name = "image_forensics"
path = "backend/src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
exif = { package = "kamadak-exif", version = "0.5" }
image = "0.24"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"

[profile.release]
opt-level = "z"
lto = true

